[tool.poetry]
name = "agave_api"
version = "0.1.5"
description = "A Python client for the Agave API"
authors = ["Joe Petrantoni <79169021+jpetrantoni@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
